Blackpurl/src/objects/Vendor_Invoicing_Group__c.object
<CustomObject>
    <fields>
        <fullName>Migration_Id__c</fullName>
        <externalId>true</externalId>
        <label>Migration Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Type__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PO Type</label>
        <referenceTo>PO_Type__c</referenceTo>
        <relationshipLabel>Vendor Invoicing Groups</relationshipLabel>
        <relationshipName>Vendor_Invoicing_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Packaged_Unit__c</fullName>
        <label>Packaged Unit</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VI_Cost__c</fullName>
        <defaultValue>0</defaultValue>
        <label>VI_Cost</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>VI_Discount__c</fullName>
        <label>VI_Discount</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>VI_Qty__c</fullName>
        <label>VI_Qty</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VI_SubTotal__c</fullName>
        <label>VI_SubTotal</label>
        <precision>15</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vendor_Invoicing_Header__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Invoicing Header</label>
        <referenceTo>Vendor_Invoicing_Header__c</referenceTo>
        <relationshipLabel>Vendor Invoicing Groups</relationshipLabel>
        <relationshipName>Vendor_Invoicing_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Vendor_Receiving_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Vendor Receiving Group</label>
        <referenceTo>Vendor_Receiving_Group__c</referenceTo>
        <relationshipLabel>Vendor Invoicing Groups</relationshipLabel>
        <relationshipName>Vendor_Invoicing_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Vendor Invoicing Group</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Vendor_Invoicing_Header__c</columns>
        <columns>VI_Cost__c</columns>
        <columns>VI_Discount__c</columns>
        <columns>VI_Qty__c</columns>
        <columns>VI_SubTotal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>VIG-{00000000}</displayFormat>
        <label>Vendor Invoicing Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vendor Invoicing Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>